2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* configure.ac: Updated version to 20041228

2004-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* attributes/attributes.tex: Added details on the symversion= 
	attribute

	* symbols/symbols.tex: Added info on the symversion= attribute and
	some more hints/details on proper pin usage.

2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040710

2004-01-17 Ales Hvezda   <ahvezda@geda.seul.org>

	* config.h.in: Remove machine generated file.

2004-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* fileformats/fileformats.tex: More really minor version field 
	updates 

	* configure.ac: Updated version to 20040111

	* symbols/symbols.tex: Applied a patch by Dan McMahill (added some
	more footprints). Thanks Dan.

	* symbols/symbols.tex: Added a couple missing \'s to above patch
	
	* netattrib/netattrib.txt: Removed obsolete file from CVS.

2004-01-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* fileformats/fileformats.tex: Fixed valid/test versions

2004-01-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* toplevel/toplevel.html.in: Changed all readme to readmes

	* Makefile.am, configure.ac, tragesym_tutoral/*, 
	toplevel/toplevel.html.in: Add tragesym tutorial by Russ Dill.
	All tutorials get installed into GEDADOCDIR/tutorials/name.

	* Makefile.am, configure.ac, gsch2pcb_tutoral/*, 
	toplevel/toplevel.html.in: Add gsch2pcb tutorial by Bill Wilson.
	Minor cleanup (offline link fixups) to the various html files.

	* attributes/attributes.tex: Added some text about setting 
	the footprint to none and unknown.

2004-01-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* fileformats/fileformats.tex: Added newest valid version.

	* fileformats/fileformats.tex: Added some text that states
	that the file format is copyright and under the GPL version 2.0.

2004-01-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* cascade/cascade.tex and friends: Added RF Cascade symbols and