@@ -151,7 +151,7 @@ Field 		& Type/unit 	& Description \\ \hline
 \item Valid versions include: 
 19990601, 19990610, 19990705, 19990829, 19990919, 19991011, 20000220, 20000704,
 20001006, 20001217, 20010304, 20010708, 20010722, 20020209, 20020414, 20020527,
-20020825, 20021103, 20030223, 20030525, 20030901, 20040111
+20020825, 20021103, 20030223, 20030525, 20030901, 20040111, 20040710, 20041228
 
 \item CVS or test versions (should not be used): 
 20030921, 20031004, 20031019, 20031231
