@@ -1,3 +1,11 @@
+2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* toplevel/gedadocs.html.in: Added README.sysc to html manual page
+
+	* toplevel/gedadocs.html.in: Added README.eagle to html manual page
+
+	* fileformats/fileformats.tex: Added new valid version string
+
 2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>
 	
 	* configure.ac: Updated version to 20041228
